# collaborative_loco_manipulation

./: .gitignore  .gitmodules  README.md
ocs2_object_manipulation/: CMakeLists.txt  package.xml
ocs2_object_manipulation/config/mpc/: task.info
ocs2_object_manipulation/config/multiplot/: mpc_observation.xml
ocs2_object_manipulation/include/ocs2_cartpole/: ObjectInterface.h  ObjectParameters.h  definitions.h  package_path.h.in
ocs2_object_manipulation/include/ocs2_cartpole/dynamics/: ObjectSystemDynamics.h
ocs2_object_manipulation/include/ocs2_object_manipulation/: CBFConstraint.h  LowPassFilter.h  ObjectInterface.h  ObjectParameters.h  Obstacles.h  SimpleObstacle.h  adaptiveControl.h  definitions.h
ocs2_object_manipulation/include/ocs2_object_manipulation/CBFs/: ObjectCBFConstraint.h  RobotCBFConstraint.h
ocs2_object_manipulation/include/ocs2_object_manipulation/dynamics/: ObjectSystemDynamics.h
ocs2_object_manipulation/src/: ObjectInterface.cpp
ocs2_object_manipulation/test/: testObject.cpp
ocs2_object_manipulation_ros/: CMakeLists.txt  package.xml
ocs2_object_manipulation_ros/config/: object_controllers.yaml
ocs2_object_manipulation_ros/include/ocs2_cartpole_ros/: ObjectDummyVisualization.h
ocs2_object_manipulation_ros/include/ocs2_object_manipulation_ros/: ObjectDummyVisualization.h  ObstacleVisualization.h  StateEstimation.h  apply_wrench.h
ocs2_object_manipulation_ros/launch/: gazebo.launch  load_controller.launch  manipulation_stack.launch  mocap.launch  multiplot.launch  object.launch  playback.launch  visualize.launch
ocs2_object_manipulation_ros/launch/worlds/: world_with_object.world
ocs2_object_manipulation_ros/plugin/: apply_wrench.cc
ocs2_object_manipulation_ros/rviz/: object.rviz
ocs2_object_manipulation_ros/src/: ApplyWrenchNode.cpp  ApplyWrenchNode_Hardware.cpp  DummyObjectNode.cpp  ObjectDummyVisualization.cpp  ObjectMpcNode.cpp  ObjectMrtNode.cpp  StateEstimation_node.cpp  TargetPoseCommand.cpp  TargetPosePredefined.cpp  apply_wrench.cpp  bagfile_recorder.cpp
ocs2_object_manipulation_ros/urdf/: object.urdf  object.xacro
scripts/: hardware.yaml  plot.py  simulation.yaml  simulation_with_quadruped.yaml
